src/objects/CGTC_CallingNumber__c.object
<CustomObject>
    <fields>
        <fullName>Caller_Location__c</fullName>
        <description>Save the location from which the caller called</description>
        <label>Caller Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caller Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Calling Numbers</relationshipLabel>
        <relationshipName>Callers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <description>Stores the page URL from which the user navigated.</description>
        <label>Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Of_Interest__c</fullName>
        <description>Stores the product name given for each page</description>
        <label>Product Of Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Calling Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Caller_Name__c</columns>
        <columns>Caller_Location__Latitude__s</columns>
        <columns>Caller_Location__Longitude__s</columns>
        <columns>Page_URL__c</columns>
        <columns>Product_Of_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMMDD}-{0}</displayFormat>
        <label>Blocked #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calling Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>